# TecchnoAfandi-FC

./: .gitignore  AUTO_UPDATE_GUIDE.md  package-lock.json  package.json  vite.config.js  دليل_التحديث_التلقائي.md
.agents/: AGENTS.md
.github/workflows/: release.yml
public/: README.txt
src/: home_page_v2.html  version_page_v2.html
src-tauri/: Cargo.toml  latest.json  tauri.conf.json
src-tauri/assets/: README.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activation.rs  downloader.rs  logger.rs  main.rs
src/scripts/: home.js  tour.js  version.js
src/styles/: error_modal.css  main.css  mode_modal.css  update_popup.css  version_page.css
