[workspace]

[package]
name = "TechnoAfandi-FC"
version = "1.0.0"
description = "A Tauri App"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
zip = "2"
sha1 = "0.10"
sha2 = "0.10"
quick-xml = "0.36"
tempfile = "3"
open = "5"
futures-util = "0.3"
notify = "7"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-process = "2.3.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
